--- a/web1/src/app/common/about/about.component.html
+++ b/web1/src/app/common/about/about.component.html
@@ -7,13 +7,10 @@
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-12 p-0 ps-3">
-                                    <h2 >Opticalguru New Updates 
-                                    </h2>
+                                    <h2 >Opticalguru New Updates</h2>
                                 </div>
                             </div>
                         </div>
-                          
-                 
                             <div class="row m-3 ">
                                 <div class="col-md-12 ">
                                    <div *ngFor="let item of data;let i = index;">
@@ -24,9 +21,6 @@
                                      </div> 
                                 </div>
                              </div>
-                        
-                       
-
                         <!-- <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
                            <div class="col-12" style="font-size: 20px; line-height: 30px;">
                                <h2 style="color: #ffea00;"> New Updates Date 27-04-2024 </h2>
@@ -35,8 +29,6 @@
                                <p>3. Opening/Closing stock report merge in Inventory Report(amount wise/Qty wise) till 30 April report will be in testing mode. From 1 May 2024 will be working.</p>
                                <p>4. Old Customer power Change date option added in customer page.</p>
                                <p>5. You can make the lens price list easily with power. Call OPTICALGURU for this feature.</p>
-                                
-                             
                             </div>
                         </div>
                         <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
@@ -48,7 +40,6 @@
                                         <li>Customer List</li>
                                         <li>Sale Report => Product pending Report</li>
                                     </ul>
-                             
                             </div>
                         </div>
                         <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
@@ -59,7 +50,6 @@
                                     <ul>
                                         <li>Go to Administration => SMS setting => Whatsapp Seeting </li>
                                     </ul>
-                             
                             </div>
                         </div>
                         <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
@@ -106,7 +96,6 @@
                                <P>1. Add the WhatsApp button on the billing page for the final delivery message.</P>
                                <P>2. Add the WhatsApp button on the sale Report page to send a message to the customer " your balance amount due please clear today"</P>
                                <P>Follow few steps</P>
-                               
                                     <ul>
                                         <li>Click on the Report option on the menu bar </li>
                                         <li>Click on the sale Report</li>
@@ -115,7 +104,7 @@
                                         <li>There is a whatsapp button</li>
                                         <li>Click and send sms </li>
                                     </ul>
-                                    <P>3. Report : with all reports there is a Filter option with red colour.  You can print reports with your needs.</P>
+                                <P>3. Report : with all reports there is a Filter option with red colour.  You can print reports with your needs.</P>
                             </div>
                         </div> -->
                     </div>
@@ -124,10 +113,7 @@
         </div>
     </div>
 </section> 
-
-
-  
-  <!-- Modal -->
+<!-- Modal -->
 
 
 
