--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -267,7 +267,7 @@
 
                             <div style="text-align: center; font-size: 20px; font-weight: 600; font-family: verdana; letter-spacing: 0px; ">
                             <% if (data.MRPHide == 'true' ){%>
-                                OMR  <%=i.RetailPrice%>  
+                                OMR  <%=i.WholeSalePrice%>  
                               <%}%>         
                         </div>
                        
