--- a/web1/src/app/admin/company-setting/company-setting.component.html
+++ b/web1/src/app/admin/company-setting/company-setting.component.html
@@ -242,8 +242,8 @@
                                                                 <mat-option value="invoice.ejs">invoice.ejs</mat-option>
                                                                 <mat-option value="Arabic.ejs">Arabic.ejs</mat-option>
                                                                 <mat-option value="invoiceSapphire.ejs">invoiceSapphire.ejs</mat-option>
-                                                                <mat-option
-                                                                    value="Santosh_Optical.ejs">Santosh_Optical.ejs</mat-option>
+                                                                <mat-option value="Santosh_Optical.ejs">Santosh_Optical.ejs</mat-option>
+                                                                <mat-option value="Al_Hareem_Perfumes.ejs">Al_Hareem_Perfumes.ejs</mat-option>
                                                             </mat-select>
                                                             <mat-error>Bill Format </mat-error>
                                                         </mat-form-field>
