--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -297,7 +297,7 @@
                                     </script>
                                 </div>
     
-                                <div style="text-align: center; font-size: 10px; font-weight: 600; font-family: verdana;">
+                                <div style="text-align: center; font-size: 10px; font-weight: 600; font-family: verdana;height: 30px;">
                                     <%=i.ProductFullName%>
                                </div>
     
