--- a/web1/src/app/common/about/about.component.html
+++ b/web1/src/app/common/about/about.component.html
@@ -7,16 +7,16 @@
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-12 p-0 ps-3">
-                                    <h2 >Opticalguru New Updates</h2>
+                                    <h2 >Opticalguru New Updates (Your Software Up To Date) </h2>
                                 </div>
                             </div>
                         </div>
                             <div class="row m-3 ">
                                 <div class="col-md-12 ">
                                    <div *ngFor="let item of data;let i = index;">
-                                       <button class="accordion" (click)="toggleAccordian($event, i)"> {{item.parentName}} </button>
+                                       <button class="accordion" (click)="toggleAccordian($event, i)"> Date: {{item.parentName}} </button>
                                        <div class="panel" hide="!item.isActive">
-                                         <p class="m-0 p-0 h3" *ngFor="let child of item.childProperties" > {{child.propertyName}} </p>
+                                         <p class="m-0 p-0 h3" *ngFor="let child of item.childProperties ; let i = index;" >  {{child.propertyName}} </p>
                                        </div>
                                      </div> 
                                 </div>
