--- a/server/views/Al_Hareem_Perfumes.ejs
+++ b/server/views/Al_Hareem_Perfumes.ejs
@@ -130,7 +130,7 @@
   }
 
   .totals .row .col1 {
-    width: 50%;
+    width: 60%;
     float: left;
   }
 
@@ -140,7 +140,7 @@
   }
 
   .totals .row .col2 {
-    width: 45%;
+    width: 35%;
     float: right;
   }
 
@@ -208,7 +208,7 @@
         <p>VAT IN: OM1100368033</p> 
       </div>
       <div class="col2">
-        <img src=<%=data.LogoURL%> alt="logo"   >
+        <img src=<%=data.LogoURL%> alt="logo"  width='100%' >
         <p style="font-size: 15px;margin: 0;"> الحريم للعطور</p>
          <p style="font-size: 15px;margin: 0;">Al Hareem Perfumes</p>
       </div>
@@ -520,8 +520,8 @@
     <div class="row">
       <div class="col1">
         <h5 style="margin: 0; margin-bottom: 5px;font-weight: normal;">Thank you for shopping!</h5>
-        <p>سياسة اإلرجاع: يمكن إرجاع العناصر المباعة في غضون 15 يو ًما</p>
-        <p>.يجب تقديم الفاتورة ويجب أن يكون العنصر في حالة التعبئة األصلية وغير التالفة</p>
+        <p>سياسة اإلرجاع: يمكن إرجاع العناصر المباعة في غضون 15 يو ًما
+        .يجب تقديم الفاتورة ويجب أن يكون العنصر في حالة التعبئة األصلية وغير التالفة</p>
 
         <p><b>Return Policy:</b>  Sold items can be returned within  15 days, invoice to be presented and the item</p>
         <p> <b> Must be in the Orignal Packaging and in an Undamaged Condition. </b></p>
