--- a/server/views/AssignSupplierPDF.ejs
+++ b/server/views/AssignSupplierPDF.ejs
@@ -7,7 +7,7 @@
         zoom: 100%;
     }
     .logo{
-        width: 100%;
+        width: 200%;
     }
 </style>
 <body style="padding: 20px;">
@@ -16,7 +16,7 @@
         <div class="main">
             <div class="row1">
                 <div class="col-1">
-                   <img src="<%=data.LogoURL%>" alt="" class="logo" width="100%">
+                   <img src="<%=data.LogoURL%>" alt="" class="logo" >
                 </div>
             </div>
             <div class="row2">
