--- a/web1/src/app/company-payment/payment/payment.component.html
+++ b/web1/src/app/company-payment/payment/payment.component.html
@@ -132,7 +132,7 @@
                                 </div>
                                 <div class="col-xl-2 col-lg-3 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>Reference</mat-label>
+                                        <mat-label>Remark</mat-label>
                                         <input matInput name="NamePay" [(ngModel)]="data.PaymentReferenceNo"
                                             #NamePaycontrol [autocomplete]="false">
                                     </mat-form-field>
