--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -65,6 +65,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label></mat-label>
                                                 <mat-select name="Title" [(ngModel)]="data.Title" #Titlecontrol>
+                                                    <mat-option value=" "></mat-option>
                                                     <mat-option value="MR.">Mr.</mat-option>
                                                     <mat-option value="Mrs.">Mrs.</mat-option>
                                                     <mat-option value="Miss.">Miss.</mat-option>
@@ -98,7 +99,6 @@
                                                     <input type="text" aria-label="Text" matInput
                                                     name="Name" [(ngModel)]="data.Name"  [formControl]="myControl" [matAutocomplete]="auto" 
                                                            (input)="customerSearch(myControl.value, 'Name')" required>
-                                                           
                                                     <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [panelWidth]="'370px'">
                                                       <mat-option style="border-bottom: 2px solid #000 !important;" class="customer-option" (click)="CustomerSelection('Value',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
                                                         <table style="width:100%">
@@ -152,11 +152,17 @@
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
-                                        <div class="col-xl-2 col-lg-2 col-md-3  col-3  mb-0">
+                                        <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
-                                                <mat-label>Anniversary</mat-label>
-                                                <input matInput name="Anniversary" type="date"
-                                                    [(ngModel)]="data.Anniversary">
+                                                <mat-label>Gender </mat-label>
+                                                <mat-select name="Gender" [(ngModel)]="data.Gender"
+                                                    #Gendercontrol>
+                                                    <mat-option></mat-option>
+                                                    <mat-option value="KIDS">KIDS</mat-option>
+                                                    <mat-option value="MALE">MALE</mat-option>
+                                                    <mat-option value="FEMALE">FEMALE</mat-option>
+                                                    <mat-option value="TRANSGENDER">TRANSGENDER</mat-option>
+                                                </mat-select>
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-5 col-lg-5 col-md-3  col-12 mb-0">
@@ -1685,17 +1691,12 @@
                                                         </mat-error>
                                                     </mat-form-field>
                                                 </div>
+                                              
                                                 <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-6 mb-0">
                                                     <mat-form-field class="example-full-width mb-0">
-                                                        <mat-label>Gender </mat-label>
-                                                        <mat-select name="Gender" [(ngModel)]="data.Gender"
-                                                            #Gendercontrol>
-                                                            <mat-option></mat-option>
-                                                            <mat-option value="KIDS">KIDS</mat-option>
-                                                            <mat-option value="MALE">MALE</mat-option>
-                                                            <mat-option value="FEMALE">FEMALE</mat-option>
-                                                            <mat-option value="TRANSGENDER">TRANSGENDER</mat-option>
-                                                        </mat-select>
+                                                        <mat-label>Anniversary</mat-label>
+                                                        <input matInput name="Anniversary" type="date"
+                                                            [(ngModel)]="data.Anniversary">
                                                     </mat-form-field>
                                                 </div>
                                                 <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-6 mb-0">
